Fix image and text alignment

--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body{
     background-color:rgb(220, 184, 24);
 }
+
 h1 {
   font-family: "Times New Roman", serif;
   color: rgb(99, 98, 98);
-  text-align: left;
+  text-align: center;
   font-size: 40px;
 }
 .home {
@@ -40,6 +41,8 @@ ol {
   border-radius: 50%;
   width: 410px;
   height: 310px;
+  display: block;
+  margin: 0 auto;
 }
 
 .description{ 
